--- a/public/templates/UserProfile.html
+++ b/public/templates/UserProfile.html
@@ -5,9 +5,13 @@
       box-sizing: border-box;
 
   }
+
+  div {
+    display: flex;
+  }
 </style>
 
-<div style="display: flex;
+<div style="
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -20,7 +24,7 @@
     border-radius: 16px;"
 >
     <div style="
-        display: flex;
+
         flex-direction: column;
         align-items: flex-start;
         padding: 0px;
@@ -29,7 +33,7 @@
         height: 134px;
     ">
         <div style="
-            display: flex;
+
             flex-direction: row;
             align-items: flex-start;
             padding: 0px;
@@ -60,7 +64,7 @@
                 {{name}}
             </h1>
             <div style="
-                display: flex;
+
                 flex-direction: row;
                 align-items: center;
                 padding: 0px;
@@ -70,7 +74,7 @@
                 height: 46px;
             ">
                 <div style="
-                    display: flex;
+
                     flex-direction: row;
                     justify-content: center;
                     align-items: center;
@@ -92,7 +96,7 @@
     </div>
 
     <div style="
-        display: flex;
+
         flex-direction: column;
         align-items: flex-start;
         padding: 0px;
@@ -102,7 +106,7 @@
         height: 73px;
     ">
         <div style="
-            display: flex;
+
             flex-direction: column;
             align-items: flex-start;
             padding: 0px;
@@ -112,7 +116,7 @@
             height: 48px;
         ">
             <div style="
-                display: flex;
+
                 flex-direction: row;
                 align-items: center;
                 padding: 0px;
@@ -122,7 +126,7 @@
                 height: 48px;
             ">
                 <div style="
-                    display: flex;
+
                     flex-direction: row;
                     align-items: center;
                     padding: 8px;
@@ -134,7 +138,7 @@
                     border-radius: 8px;
                 ">
                     <div style="
-                        display: flex;
+
                         flex-direction: row;
                         align-items: center;
                         padding: 0px;
@@ -149,7 +153,7 @@
                             border-radius: 4px;
                         "/>
                         <div style="
-                            display: flex;
+
                             flex-direction: row;
                             align-items: flex-start;
                             padding: 0px;
@@ -174,7 +178,7 @@
                     </div>
                 </div>
                 <div style="
-                    display: flex;
+
                     flex-direction: row;
                     align-items: center;
                     padding: 8px;
@@ -186,7 +190,7 @@
                     border-radius: 8px;
                 ">
                     <div style="
-                        display: flex;
+
                         flex-direction: row;
                         align-items: center;
                         padding: 0px;
@@ -201,7 +205,7 @@
                             border-radius: 4px;
                         "/>
                         <div style="
-                            display: flex;
+
                             flex-direction: row;
                             align-items: flex-start;
                             padding: 0px;
@@ -243,7 +247,7 @@
         </div>
 
         <div style="
-            display: flex;
+
             flex-direction: column;
             align-items: center;
             padding: 0px;
@@ -252,7 +256,7 @@
             height: 17px;
         ">
             <div style="
-                display: flex;
+
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
@@ -263,7 +267,7 @@
                 height: 17px;
             ">
                 <div style="
-                    display: flex;
+
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
@@ -274,7 +278,7 @@
                     height: 10.5px;
                 ">
                     <div style="
-                        display: flex;
+
                         flex-direction: row;
                         justify-content: center;
                         align-items: center;
@@ -287,42 +291,42 @@
                         border-radius: 20px;
                     ">
                         <div style="
-                            display: flex;
+
                             width: 513px;
                             height: 10.5px;
                             background: #3A5CCC;
                         ">
                         </div>
                         <div style="
-                            display: flex;
+
                             width: 513px;
                             height: 10.5px;
                             background: #FFB224;
                         ">
                         </div>
                         <div style="
-                            display: flex;
+
                             width: 30px;
                             height: 10.5px;
                             background: #E93D82;
                         ">
                         </div>
                         <div style="
-                            display: flex;
+
                             width: 30px;
                             height: 10.5px;
                             background: #AD7F58;
                         ">
                         </div>
                         <div style="
-                            display: flex;
+
                             width: 19px;
                             height: 10.5px;
                             background: #E54D2E;
                         ">
                         </div>
                         <div style="
-                            display: flex;
+
                             width: 11px;
                             height: 10.5px;
                             background: #C1C8CD;
