feat: add dynamic image

--- a/public/templates/UserProfile.html
+++ b/public/templates/UserProfile.html
@@ -42,7 +42,7 @@
             width: 1136px;
             height: 134px;
         ">
-            <img src="http://localhost:3006/placeholder/avatar.png" width="1px" height="1px" style="
+            <img src="https://www.github.com/{{name}}.png?size=300" width="1px" height="1px" style="
                 box-sizing: border-box;
                 width: 132px;
                 height: 132px;
