feat: dynamic user profile card

--- a/public/templates/UserProfile.html
+++ b/public/templates/UserProfile.html
@@ -125,123 +125,7 @@
                 width: 1136px;
                 height: 48px;
             ">
-                <div style="
-
-                    flex-direction: row;
-                    align-items: center;
-                    padding: 8px;
-                    gap: 12px;
-                    width: 150px;
-                    height: 48px;
-                    background: #F8F9FA;
-                    border: 1px solid #DFE3E6;
-                    border-radius: 8px;
-                ">
-                    <div style="
-
-                        flex-direction: row;
-                        align-items: center;
-                        padding: 0px;
-                        gap: 6px;
-
-                        width: 134px;
-                        height: 32px;
-                    ">
-                        <img src="http://localhost:3006/placeholder/xstate.png" width="1px" height="1px" style="
-                            width: 32px;
-                            height: 32px;
-                            border-radius: 4px;
-                        "/>
-                        <div style="
-
-                            flex-direction: row;
-                            align-items: flex-start;
-                            padding: 0px;
-                            gap: 2px;
-
-                            width: 96px;
-                            height: 32px;
-                        ">
-                            <h2 style="
-                                width: 96px;
-                                height: 32px;
-                                font-family: 'Inter';
-                                font-style: normal;
-                                font-weight: 500;
-                                font-size: 32px;
-                                line-height: 100%;
-                                color: #11181C;
-                            ">
-                                xstate
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-                <div style="
-
-                    flex-direction: row;
-                    align-items: center;
-                    padding: 8px;
-                    gap: 12px;
-                    width: 215px;
-                    height: 48px;
-                    background: #F8F9FA;
-                    border: 1px solid #DFE3E6;
-                    border-radius: 8px;
-                ">
-                    <div style="
-
-                        flex-direction: row;
-                        align-items: center;
-                        padding: 0px;
-                        gap: 6px;
-
-                        width: 199px;
-                        height: 32px;
-                    ">
-                        <img src="http://localhost:3006/placeholder/backstage.png" width="1px" height="1px" style="
-                            width: 32px;
-                            height: 32px;
-                            border-radius: 4px;
-                        "/>
-                        <div style="
-
-                            flex-direction: row;
-                            align-items: flex-start;
-                            padding: 0px;
-                            gap: 2px;
-
-                            width: 161px;
-                            height: 32px;
-                        ">
-                            <h2 style="
-                                width: 161px;
-                                height: 32px;
-                                font-family: 'Inter';
-                                font-style: normal;
-                                font-weight: 500;
-                                font-size: 32px;
-                                line-height: 100%;
-                                color: #11181C;
-                            ">
-                                backstage
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-                <h2 style="
-                    width: 39px;
-                    height: 37px;
-                    font-family: 'Inter';
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 32px;
-                    line-height: 115%;
-                    letter-spacing: -0.02em;
-                    color: #687076;
-                ">
-                    +7
-                </h2>
+                {{repos}}
             </div>
 
         </div>
@@ -290,48 +174,7 @@
 
                         border-radius: 20px;
                     ">
-                        <div style="
-
-                            width: 513px;
-                            height: 10.5px;
-                            background: #3A5CCC;
-                        ">
-                        </div>
-                        <div style="
-
-                            width: 513px;
-                            height: 10.5px;
-                            background: #FFB224;
-                        ">
-                        </div>
-                        <div style="
-
-                            width: 30px;
-                            height: 10.5px;
-                            background: #E93D82;
-                        ">
-                        </div>
-                        <div style="
-
-                            width: 30px;
-                            height: 10.5px;
-                            background: #AD7F58;
-                        ">
-                        </div>
-                        <div style="
-
-                            width: 19px;
-                            height: 10.5px;
-                            background: #E54D2E;
-                        ">
-                        </div>
-                        <div style="
-
-                            width: 11px;
-                            height: 10.5px;
-                            background: #C1C8CD;
-                        ">
-                        </div>
+                        {{langs}}
                     </div>
                 </div>
             </div>
